<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFB803"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="662dp"
        android:layout_marginTop="240dp"
        android:background="@drawable/lineershape"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_qustion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:background="@drawable/qshape"
        android:text="@string/qustion"
        android:textColor="#ffff"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="371dp"
        android:layout_height="51dp"
        android:layout_marginTop="84dp"
        android:orientation="horizontal"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_qustion">

        <Button
            android:id="@+id/bt_true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/trueshape"
            android:text="@string/TRUE" />

        <Button
            android:id="@+id/bt_false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/falseshape"
            android:text="@string/FALSE"
            android:textColor="#ffff"

            />
    </LinearLayout>

    <Button
        android:id="@+id/bt_next"
        android:layout_width="126dp"
        android:layout_height="53dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/nextshape"
        android:drawableRight="@drawable/next"
        android:text="@string/nextbt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.733"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <Button
        android:id="@+id/previous"

        android:layout_width="124dp"
        android:layout_height="53dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/priv"
        android:drawableLeft="@drawable/previous_24dp"
        android:text="@string/priv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.261"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/showresult"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:background="@drawable/trueshape"
        android:fontFamily="@font/gg"
        android:gravity="center"
        android:text="عرض النتيجة "
        android:textColor="#ffff"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/previous" />

    <ImageButton
        android:id="@+id/imprev"

        android:layout_width="58dp"
        android:layout_height="53dp"
        android:background="@drawable/priv"
        android:contentDescription="@string/desnext"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imnext"
        app:layout_constraintHorizontal_bias="0.44"
        app:layout_constraintStart_toStartOf="@+id/linearLayout3"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.3"
        app:srcCompat="@drawable/previous_24dp"
        tools:ignore="MissingConstraints">

    </ImageButton>

    <ImageButton

        android:id="@+id/imnext"
        android:layout_width="58dp"
        android:layout_height="53dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="76dp"
        android:layout_marginRight="76dp"
        android:background="@drawable/nextshape"
        android:contentDescription="@string/despriv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.91"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_next"
        app:srcCompat="@drawable/next"
        tools:ignore="VectorDrawableCompat" />
    app:layout_constraintTop_toBottomOf="@+id/previous" />



</androidx.constraintlayout.widget.ConstraintLayout>